# SeeYou

./: .env.example  .gitignore  LICENSE  README.md  TERMS.md  docker-compose.yml
.cursor/: mcp.json
.cursor/plans/: seeyou_intelligence_upgrade_d5b4c341.plan.md  ux_intelligence_popups_search_937116a0.plan.md
.cursor/skills/sync-docs/: SKILL.md
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: cables.rs  cameras.rs  cyber.rs  events.rs  fires.rs  gdelt.rs  geocode.rs  graph_api.rs  graph_hydration.rs  health.rs  lib.rs  maritime.rs  military_bases.rs  nuclear_sites.rs  roads.rs  router.rs  satellites.rs  seismic.rs  space_weather.rs  stable_ids.rs  tomtom.rs  weather.rs
backend/crates/bus/: Cargo.toml
backend/crates/bus/src/: chunking.rs  config.rs  consumer.rs  envelope.rs  lib.rs  producer.rs  schema_registry.rs  topics.rs
backend/crates/cables/: Cargo.toml
backend/crates/cables/src/: lib.rs  telegeography.rs  types.rs
backend/crates/cache/: Cargo.toml
backend/crates/cache/src/: aircraft.rs  cables.rs  cameras.rs  cyber.rs  events.rs  fires.rs  gdelt.rs  geocode.rs  health.rs  lib.rs  maritime.rs  metar.rs  pool.rs  roads.rs  satellites.rs  seismic.rs  space_weather.rs  traffic.rs  weather.rs
backend/crates/cameras/: Cargo.toml
backend/crates/cameras/src/: health.rs  lib.rs  proxy.rs  tracker.rs  types.rs  view.rs
backend/crates/cameras/src/providers/: caltrans.rs  generic.rs  mcp_camera.rs  mod.rs  nycdot.rs  otcmap.rs  tfl.rs
backend/crates/consumer_graph/: Cargo.toml
backend/crates/consumer_graph/src/: constants.rs  consumer.rs  geo.rs  graph_links.rs  lib.rs  main.rs  payload.rs  processing.rs
backend/crates/consumer_postgres/: Cargo.toml
backend/crates/consumer_postgres/src/: main.rs
backend/crates/consumer_redis/: Cargo.toml
backend/crates/consumer_redis/src/: main.rs
backend/crates/cyber/: Cargo.toml
backend/crates/cyber/src/: lib.rs  threatfox.rs  types.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 0001_extensions.sql  0002_aircraft_positions.sql  0003_cameras.sql  0004_traffic_segments.sql  0005_weather_readings.sql  0006_events.sql  0007_timescale_policies.sql  0008_intelligence_domains.sql  0009_satellite_positions.sql
backend/crates/db/src/: aircraft.rs  cables.rs  cameras.rs  cyber.rs  error.rs  events.rs  fires.rs  gdelt.rs  lib.rs  maritime.rs  migrate.rs  military_bases.rs  models.rs  nuclear_sites.rs  pool.rs  satellites.rs  seismic.rs  space_weather.rs  traffic.rs  weather.rs
backend/crates/events/: Cargo.toml
backend/crates/events/src/: eonet.rs  lib.rs  types.rs
backend/crates/fires/: Cargo.toml
backend/crates/fires/src/: firms.rs  lib.rs  types.rs
backend/crates/gdelt/: Cargo.toml
backend/crates/gdelt/src/: api.rs  lib.rs  types.rs
backend/crates/graph/: Cargo.toml
backend/crates/graph/src/: client.rs  entities.rs  lib.rs  ontology.rs  queries.rs  relations.rs  zone_geometry.rs  zones.rs
backend/crates/maritime/: Cargo.toml
backend/crates/maritime/src/: ais.rs  lib.rs  types.rs
backend/crates/prediction/: Cargo.toml
backend/crates/prediction/src/: ekf.rs  history.rs  imm.rs  lib.rs  service.rs  trajectory.rs
backend/crates/prediction/src/models/: climb_descend.rs  constant_acceleration.rs  constant_velocity.rs  coordinated_turn.rs  mod.rs
backend/crates/prediction/src/patterns/: cap.rs  mod.rs  orbit.rs  transit.rs
backend/crates/runtime_logging/: Cargo.toml
backend/crates/runtime_logging/src/: lib.rs
backend/crates/satellites/: Cargo.toml
backend/crates/satellites/src/: celestrak.rs  lib.rs  propagator.rs  tracker.rs  types.rs
backend/crates/seismic/: Cargo.toml
backend/crates/seismic/src/: lib.rs  types.rs  usgs.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: app_state.rs  config.rs  error.rs  main.rs
backend/crates/services/: Cargo.toml
backend/crates/services/src/: adsb.rs  aircraft.rs  aircraft_tracker.rs  aviation_weather.rs  lib.rs  metar_tracker.rs
backend/crates/space_weather/: Cargo.toml
backend/crates/space_weather/src/: lib.rs  noaa.rs  types.rs
backend/crates/traffic/: Cargo.toml
backend/crates/traffic/src/: density.rs  lib.rs  overpass.rs  parser.rs  types.rs
backend/crates/weather/: Cargo.toml
backend/crates/weather/src/: lib.rs  openmeteo.rs  types.rs
backend/crates/ws/: Cargo.toml
backend/crates/ws/src/: broadcast.rs  handler.rs  lib.rs  messages.rs
backend/data/: military_bases.json  nuclear_sites.json
backend/data/zones/: global_zones.geojson
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  api-reference.md  architecture.md  contributing.md  data-sources.md  getting-started.md  index.html  roadmap.md  spy-satellite-simulator-reference.md  websocket-protocol.md
docs/backend/: cache-layer.md  camera-system.md  crate-architecture.md  data-trackers.md  prediction-engine.md
docs/frontend/: globe-layers.md  shaders-hud.md  state-management.md  structure.md  ui-components.md
docs/plans/: 2026-02-28-seeyou-roadmap.md  2026-03-01-primitives-migration.md  2026-03-02-gotham-architecture.md
docs/reports/: 2026-03-05-phase1-full-test-report.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApiStatus.tsx  Badge.tsx  DraggablePanel.tsx  ErrorBoundary.tsx  LoadingStates.tsx  Tooltip.tsx  TransitionWrapper.tsx
frontend/src/data/: capitals.test.ts  capitals.ts
frontend/src/hooks/: batchAccumulator.test.ts  batchAccumulator.ts  useAircraftStore.ts  useAppState.ts  useClustering.ts  useCursorPosition.ts  useGraphNavigation.test.ts  useGraphNavigation.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLevelOfDetail.ts  useSatelliteStore.ts  useViewerCallbacks.test.ts  useViewerCallbacks.ts  useWebSocket.ts
frontend/src/lib/: basemapProviders.test.ts  basemapProviders.ts  browserConsoleCapture.test.ts  browserConsoleCapture.ts  cesium-config.ts  constants.ts
frontend/src/types/: ws.ts  (+22 more)
posts/: linkedin-post-2.md
scripts/: dev-tmux.sh
(+137 files in other folders)
