[workspace]
members = [
    "crates/server",
    "crates/api",
    "crates/ws",
    "crates/cache",
    "crates/services",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
