[workspace]
members = [
    "crates/bus",
    "crates/server",
    "crates/api",
    "crates/db",
    "crates/ws",
    "crates/cache",
    "crates/services",
    "crates/prediction",
    "crates/traffic",
    "crates/cameras",
    "crates/satellites",
    "crates/events",
    "crates/weather",
    "crates/cables",
    "crates/seismic",
    "crates/fires",
    "crates/gdelt",
    "crates/maritime",
    "crates/cyber",
    "crates/space_weather",
    "crates/consumer_redis",
    "crates/consumer_postgres",
    "crates/graph",
    "crates/consumer_graph",
    "crates/runtime_logging",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
prost = "0.13"
rdkafka = { version = "0.36", features = ["tokio", "cmake-build", "ssl-vendored"] }
tokio-stream = "0.1"
surrealdb = { version = "3.0.2", default-features = false, features = ["protocol-http", "protocol-ws", "rustls"] }
geojson = "0.24"
rustls = { version = "0.23.37", features = ["ring"] }
tracing-appender = "0.2"
