[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
cache = { path = "../cache" }
cameras = { path = "../cameras" }
events = { path = "../events" }
traffic = { path = "../traffic" }
weather = { path = "../weather" }
