[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
anyhow.workspace = true
cache = { path = "../cache" }
cables = { path = "../cables" }
cameras = { path = "../cameras" }
cyber = { path = "../cyber" }
events = { path = "../events" }
fires = { path = "../fires" }
gdelt = { path = "../gdelt" }
maritime = { path = "../maritime" }
seismic = { path = "../seismic" }
space_weather = { path = "../space_weather" }
weather = { path = "../weather" }
