[package]
name = "bus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
prost.workspace = true
rdkafka.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
