[package]
name = "cameras"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
async-trait.workspace = true
cache = { path = "../cache" }
