[package]
name = "consumer_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
bus = { path = "../bus" }
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
surrealdb.workspace = true
graph = { path = "../graph" }
runtime_logging = { path = "../runtime_logging" }
