[package]
name = "consumer_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
chrono.workspace = true
bus = { path = "../bus" }
services = { path = "../services" }
cameras = { path = "../cameras" }
weather = { path = "../weather" }
satellites = { path = "../satellites" }
events = { path = "../events" }
ws = { path = "../ws" }
cables = { path = "../cables" }
cyber = { path = "../cyber" }
db = { path = "../db" }
fires = { path = "../fires" }
gdelt = { path = "../gdelt" }
maritime = { path = "../maritime" }
rdkafka.workspace = true
seismic = { path = "../seismic" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha1 = "0.10"
space_weather = { path = "../space_weather" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
runtime_logging = { path = "../runtime_logging" }
