[package]
name = "satellites"
version = "0.1.0"
edition = "2021"

[dependencies]
sgp4 = "2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
bus = { path = "../bus" }
cache = { path = "../cache" }
db = { path = "../db" }
ws = { path = "../ws" }
