[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
serde.workspace = true
api = { path = "../api" }
ws = { path = "../ws" }
cache = { path = "../cache" }
url.workspace = true
