[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
api = { path = "../api" }
bus = { path = "../bus" }
db = { path = "../db" }
ws = { path = "../ws" }
cache = { path = "../cache" }
cables = { path = "../cables" }
cyber = { path = "../cyber" }
events = { path = "../events" }
fires = { path = "../fires" }
gdelt = { path = "../gdelt" }
maritime = { path = "../maritime" }
seismic = { path = "../seismic" }
services = { path = "../services" }
space_weather = { path = "../space_weather" }
traffic = { path = "../traffic" }
cameras = { path = "../cameras" }
satellites = { path = "../satellites" }
weather = { path = "../weather" }
reqwest.workspace = true
url.workspace = true
chrono.workspace = true
graph = { path = "../graph" }
runtime_logging = { path = "../runtime_logging" }
