[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
futures-util.workspace = true
cache = { path = "../cache" }
bus = { path = "../bus" }
ws = { path = "../ws" }
prediction = { path = "../prediction" }
db = { path = "../db" }
